@@ -1,32 +1,53 @@
 package org.pucar.dristi.util;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import org.pucar.dristi.config.Configuration;
-import static org.pucar.dristi.config.ServiceConstants.*;
+import static org.pucar.dristi.config.ServiceConstants.BUSINESS_SERVICES;
+import static org.pucar.dristi.config.ServiceConstants.BUSINESS_SERVICE_NOT_FOUND;
+import static org.pucar.dristi.config.ServiceConstants.FAILED_TO_PARSE_BUSINESS_SERVICE_SEARCH;
+import static org.pucar.dristi.config.ServiceConstants.NOT_FOUND;
+import static org.pucar.dristi.config.ServiceConstants.PARSING_ERROR;
+import static org.pucar.dristi.config.ServiceConstants.TENANTID;
+import static org.pucar.dristi.config.ServiceConstants.THE_BUSINESS_SERVICE;
+
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+
+import org.egov.common.contract.models.RequestInfoWrapper;
+import org.egov.common.contract.models.Workflow;
 import org.egov.common.contract.request.RequestInfo;
 import org.egov.common.contract.request.User;
-import org.egov.common.contract.workflow.*;
-import org.egov.common.contract.models.*;
-import org.pucar.dristi.repository.ServiceRequestRepository;
+import org.egov.common.contract.workflow.BusinessService;
+import org.egov.common.contract.workflow.BusinessServiceResponse;
+import org.egov.common.contract.workflow.ProcessInstance;
+import org.egov.common.contract.workflow.ProcessInstanceRequest;
+import org.egov.common.contract.workflow.ProcessInstanceResponse;
+import org.egov.common.contract.workflow.State;
 import org.egov.tracer.model.CustomException;
+import org.pucar.dristi.config.Configuration;
+import org.pucar.dristi.repository.ServiceRequestRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.util.CollectionUtils;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import com.fasterxml.jackson.databind.ObjectMapper;
 
 @Service
 public class WorkflowUtil {
 
-	@Autowired
 	private ServiceRequestRepository repository;
 
-	@Autowired
 	private ObjectMapper mapper;
 
-	@Autowired
 	private Configuration configs;
+
+	@Autowired
+	public WorkflowUtil(ServiceRequestRepository repository, ObjectMapper mapper, Configuration configs) {
+		this.repository = repository;
+		this.mapper = mapper;
+		this.configs = configs;
+	}
 
 	/**
 	 * Searches the BussinessService corresponding to the businessServiceCode
@@ -149,7 +170,7 @@ public class WorkflowUtil {
 			List<String> userIds = null;
 
 			if (!CollectionUtils.isEmpty(processInstance.getAssignes())) {
-				userIds = processInstance.getAssignes().stream().map(User::getUuid).collect(Collectors.toList());
+				userIds = processInstance.getAssignes().stream().map(User::getUuid).toList();
 			}
 
 			Workflow workflow = Workflow.builder().action(processInstance.getAction()).assignes(userIds)
